--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap");
+
+@font-face {
+  font-family: CourierOffline;
+  src: url(SLC_.ttf);
+}
+
 html,
 body {
   height: 100vh;
@@ -24,7 +30,7 @@ body {
 }
 
 #test {
-  font-family: "Courier";
+  font-family: "CourierOffline";
   color: #fff;
   font-size: 0.5vw;
   line-height: 0.5vw;
